Improving test job.